--- a/client1/client.conf
+++ b/client1/client.conf
@@ -39,8 +39,8 @@ proto udp
 # The hostname/IP and port of the server.
 # You can have multiple remote entries
 # to load balance between the servers.
-remote my-server-1 1194
-;remote my-server-2 1194
+remote  1194
+;remote servervpn 1194
 
 # Choose a random host from the remote
 # list for load-balancing.  Otherwise
@@ -85,6 +85,8 @@ persist-tun
 # a separate .crt/.key file pair
 # for each client.  A single ca
 # file can be used for all clients.
+#
+# # HEM DE CAMBIAR 
 ca ca.crt
 cert client.crt
 key client.key
