--- a/server/server.conf
+++ b/server/server.conf
@@ -75,14 +75,19 @@ dev tun
 # Any X509 key management system can be used.
 # OpenVPN can also use a PKCS #12 formatted key file
 # (see "pkcs12" directive in man page).
-ca ca.crt
-cert server.crt
-key server.key  # This file should be kept secret
+#ca ca.crt
+#cert server.crt
+#key server.key  # This file should be kept secret
 
 # Diffie hellman parameters.
 # Generate your own with:
 #   openssl dhparam -out dh2048.pem 2048
-dh dh2048.pem
+#dh dh2048.pem
+
+ca /etc/openvpn/server/cacert.pem
+cert /etc/openvpn/server/servercert.vpn.pem
+key /etc/openvpn/server/serverkey.vpn.pem
+dh /etc/openvpn/server/dh2048.pem
 
 # Network topology
 # Should be subnet (addressing via IP)
@@ -313,4 +318,3 @@ verb 3
 # Notify the client that when the server restarts so it
 # can automatically reconnect.
 explicit-exit-notify 1
-
