--- a/vpn21/client1/Dockerfile
+++ b/vpn21/client1/Dockerfile
@@ -5,10 +5,10 @@ LABEL author="@marcfornes ASIX-M11"
 LABEL subject="client1"
 RUN apt-get update
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y install procps iproute2 tree nmap vim systemd less openvpn
+RUN apt-get -y install procps iproute2 tree nmap vim systemd less openvpn xinetd
 RUN mkdir /opt/docker
 COPY * /opt/docker/
 RUN chmod +x /opt/docker/startup.sh
 WORKDIR /opt/docker
 CMD /opt/docker/startup.sh
-EXPOSE 1194 22
+EXPOSE 1194 13
