collons no hi ha systemd

--- a/vpn21/client1/client.conf
+++ b/vpn21/client1/client.conf
@@ -41,6 +41,7 @@ proto udp
 # to load balance between the servers.
 remote  1194
 ;remote servervpn 1194
+# vpn.edt.org 1194 ?? i a /etc/hosts vpn.edt.org  IP:AMAZON ??
 
 # Choose a random host from the remote
 # list for load-balancing.  Otherwise
@@ -87,9 +88,9 @@ persist-tun
 # file can be used for all clients.
 #
 # # HEM DE CAMBIAR 
-ca ca.crt
-cert client.crt
-key client.key
+ca /etc/openvpn/client/cacert.pem
+cert /etc/openvpn/client/clientcert.1vpn.pem
+key /etc/openvpn/client/clientkey.1vpn.pem
 
 # Verify server certificate by checking that the
 # certicate has the correct key usage set.
