queda client2client

--- a/vpn21/client1/client.conf
+++ b/vpn21/client1/client.conf
@@ -39,9 +39,10 @@ proto udp
 # The hostname/IP and port of the server.
 # You can have multiple remote entries
 # to load balance between the servers.
-remote  1194
-;remote servervpn 1194
+#remote  1194
+#;remote servervpn 1194
 # vpn.edt.org 1194 ?? i a /etc/hosts vpn.edt.org  IP:AMAZON ??
+remote 18.212.206.155 1194
 
 # Choose a random host from the remote
 # list for load-balancing.  Otherwise
