--- a/vpn21/server/openvpn@.service
+++ b/vpn21/server/openvpn@.service
@@ -6,26 +6,20 @@ Before=systemd-user-sessions.service
 After=network-online.target
 Wants=network-online.target
 Documentation=man:openvpn(8)
-Documentation=https://community.openvpn.net/openvpn/wiki/Openvpn24ManPage
-Documentation=https://community.openvpn.net/openvpn/wiki/HOWTO
 
 [Service]
-Type=notify
+
 PrivateTmp=true
-WorkingDirectory=/etc/openvpn
-#ExecStart=/usr/sbin/openvpn --daemon ovpn-%i --status /run/openvpn/%i.status 10 --cd /etc/openvpn --config /etc/openvpn/%i.conf --writepid /run/openvpn/%i.pid
-ExecStart=/usr/sbin/openvpn --daemon --writepid /var/run/openvpn/%i.pid --cd /etc/openvpn/ --config %i.conf
+Type=forking
 PIDFile=/run/openvpn/%i.pid
-KillMode=process
-ExecReload=/bin/kill -HUP $MAINPID
-CapabilityBoundingSet=CAP_IPC_LOCK CAP_NET_ADMIN CAP_NET_BIND_SERVICE CAP_NET_RAW CAP_SETGID CAP_SETUID CAP_SYS_CHROOT CAP_DAC_OVERRIDE CAP_AUDIT_WRITE
-LimitNPROC=100
-DeviceAllow=/dev/null rw
-DeviceAllow=/dev/net/tun rw
-ProtectSystem=true
-ProtectHome=true
-RestartSec=5s
-Restart=on-failure
+ExecStartPre=/usr/bin/echo servei %i %I
+ExecStart=/usr/sbin/openvpn --daemon --writepid /var/run/openvpn/%i.pid --cd
+/etc/openvpn/ --config %i.conf
 
 [Install]
 WantedBy=multi-user.target
+/usr/lib/systemd/system/docker.service
+--fixed-cidr=172.19.0.0/16
+
+# systemctl daemon-reload
+# systemctl restart docker.service
