--- a/vpn21/server/server.conf
+++ b/vpn21/server/server.conf
@@ -246,7 +246,8 @@ keepalive 10 120
 # a copy of this key.
 # The second parameter should be '0'
 # on the server and '1' on the clients.
-tls-auth ta.key 0 # This file is secret
+#tls-auth ta.key 0 # This file is secret
+tls-auth /etc/openvpn/server/ta.key 0
 
 # Select a cryptographic cipher.
 # This config item must be copied to
@@ -317,4 +318,4 @@ verb 3
 
 # Notify the client that when the server restarts so it
 # can automatically reconnect.
-explicit-exit-notify 1
+explicit-exit-notify 
