--- a/vpn21/client1/client.conf
+++ b/vpn21/client1/client.conf
@@ -42,7 +42,7 @@ proto udp
 #remote  1194
 #;remote servervpn 1194
 # vpn.edt.org 1194 ?? i a /etc/hosts vpn.edt.org  IP:AMAZON ??
-remote 18.212.206.155 1194
+remote 50.19.25.119 1194
 
 # Choose a random host from the remote
 # list for load-balancing.  Otherwise
@@ -109,7 +109,7 @@ remote-cert-tls server
 
 # If a tls-auth key is used on the server
 # then every client must also have the key.
-tls-auth ta.key 1
+tls-auth /etc/openvpn/client/ta.key 1
 
 # Select a cryptographic cipher.
 # If the cipher option is used on the server
